--- a/style.css
+++ b/style.css
@@ -8,3 +8,10 @@
     font-family: sans-serif;
     font-size: 11px;
 }
+
+#slider11{
+    width: 50%;
+    position: fixed;
+    bottom: 10%;
+    left: 7%;
+}
