--- a/sliderStyle.css
+++ b/sliderStyle.css
@@ -8,16 +8,19 @@
 }
 
 #range-label {
-    margin:30px auto;
+    width: 30%;
+    height:40%;
+    margin:10px auto;
     background-color:#444;
-    padding:10px; border-radius:5px;
+    padding:5px; border-radius:5px;
     text-align:center;
     font-size:1.2em;
     color:#fff}
 
 #slider-container {
     position: relative;
-    height:30px;
+    width: 30%;
+    height:40%;
     background-color: #eeeef5;
 }
 
