Sistemazione date estremi slider

--- a/style.css
+++ b/style.css
@@ -15,3 +15,23 @@
     bottom: 10%;
     left: 7%;
 }
+
+#startdate{
+    /*border: 1px solid black;*/
+    width: 17%;
+    height: 20px;
+    border-radius: 5px;
+    position: relative;
+    top: 25px;
+    left: -35px;
+}
+
+#enddate{
+    width: 17%;
+    height: 20px;
+    border-radius: 5px;
+    position: relative;
+    top: 5px;
+    right: 10px;
+}
+
