--- a/style.css
+++ b/style.css
@@ -72,10 +72,12 @@
     top: 0;
     right: 0;
     background-color: rgb(171, 204, 223); /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
+    overflow-x: hidden;
+    /*overflow-y: scroll;*/
+    padding-top: 60px; /* Place content 60px from the top -> occhio qua!!! */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
+
 /* Position and style the close button (top right corner) */
 .sidenav .closebtn {
     position: absolute;
@@ -84,3 +86,14 @@
     font-size: 36px;
     margin-right: 50px;
 }
+
+
+.user-instance{
+    border: 1px solid black;
+    border-radius: 15px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+
