--- a/style.css
+++ b/style.css
@@ -96,4 +96,18 @@
     justify-content: space-evenly;
 }
 
+#search-bar-container{
+    display: flex;
+    justify-content: center;
+}
 
+#myInput {
+    background-image: url('img/searchicon.png');
+    background-position: 10px 12px;
+    background-repeat: no-repeat;
+    width: 70%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    margin-bottom: 12px;
+}
