--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@
 }
 
 
-.user-instance{
+.user-instance, .not-found-text{
     border: 1px solid black;
     border-radius: 15px;
     margin-top: 10px;
