Aggiunti grafici di dimensione fissa scalabili

--- a/training_style.css
+++ b/training_style.css
@@ -9,6 +9,15 @@ body{
     border-radius: 0.5rem;
     background: #fff;
 }
+
+
+@media (min-width: 1300px) {
+    .container {
+        max-width: 1290px;
+    }
+}
+
+
 .profile-user-name{
     text-align: center;
 }
@@ -114,6 +123,10 @@ body{
 .graphic img{
     width: 50%;
     height: 20%;
+}
+
+#graphic-container{
+    text-align: center;
 }
 
 .divider-line {
