--- a/training_style.css
+++ b/training_style.css
@@ -164,3 +164,19 @@ body{
 .make-divs-inline{
     display: inline-block;
 }
+
+@media (min-width: 1400px) {
+    .container{
+        max-width: 1350px;
+    }
+}
+@media (min-width: 1600px) {
+    .container{
+        max-width: 1550px;
+    }
+}
+@media (min-width: 1800px) {
+    .container{
+        max-width: 1700px;
+    }
+}
