--- a/training_style.css
+++ b/training_style.css
@@ -177,6 +177,13 @@ body{
     margin-left: -20px;
 }
 
+.graph-labels{
+    text-decoration: none;
+    color: #000000;
+    font-weight: 600;
+    font-size: 14px;
+}
+
 @media (min-width: 1400px) {
     .container{
         max-width: 1350px;
