--- a/training_style.css
+++ b/training_style.css
@@ -76,7 +76,7 @@ body{
     margin-top: -13%;
 }
 .profile-work p {
-    font-size: 14px;
+    font-size: 15px;
     color: #818182;
     font-weight: 600;
     margin-top: 10%;
@@ -182,6 +182,11 @@ body{
     color: #000000;
     font-weight: 600;
     font-size: 14px;
+}
+
+/* voto predetto*/
+#predicted{
+    margin-right: 10px;
 }
 
 @media (min-width: 1400px) {
