--- a/training_style.css
+++ b/training_style.css
@@ -248,6 +248,15 @@ h6{
     cursor: pointer;
 }
 
+.checkbox-position{
+    margin-bottom: 2px;
+}
+
+.set-padding{
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
 @media (min-width: 1400px) {
     .container{
         max-width: 1350px;
